ingress-dev.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-mzilli
  namespace: develop
  labels:
    app: demp-ci
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api-dev.mzilli.tk
    http:
      paths:
      - path: /products
        backend:
          serviceName: product-svc
          servicePort: 3000
      - path: /orders
        backend: 
          serviceName: order-svc
          servicePort: 3000
      - path: /accounts
        backend: 
          serviceName: account-svc
          servicePort: 3000
      - path: /users
        backend: 
          serviceName: user-svc
          servicePort: 3000
